<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tVw1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tVw1_caption"
        app:layout_constraintBottom_toTopOf="@+id/tVw2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVresult" />

    <TextView
        android:id="@+id/tVw2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tVw2_caption"
        app:layout_constraintBottom_toTopOf="@+id/tVelapsed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVw1" />

    <TextView
        android:id="@+id/tVelapsed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tVelapsed_caption"
        app:layout_constraintBottom_toTopOf="@+id/tViter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVw2" />

    <TextView
        android:id="@+id/tViter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tViter_caption"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVelapsed" />

    <TextView
        android:id="@+id/tVresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tVresult_caption"
        app:layout_constraintBottom_toTopOf="@+id/tVw1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_maxiter" />

    <Spinner
        android:id="@+id/spinner_lrate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:entries="@array/spinner_lrate_arr"
        app:layout_constraintBottom_toTopOf="@+id/spinner_time_deadline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_time_deadline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:entries="@array/spinner_time_deadline_arr"
        app:layout_constraintBottom_toTopOf="@+id/spinner_maxiter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_lrate" />

    <Spinner
        android:id="@+id/spinner_maxiter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:entries="@array/spinner_maxiter_arr"
        app:layout_constraintBottom_toTopOf="@+id/tVresult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_time_deadline" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:onClick="train"
        android:text="@string/btn_caption"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>